Bug 73173 - exposay: surfaces should stay on their outputs
Summary: exposay: surfaces should stay on their outputs
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-30 23:00 UTC by Anu Reddy
Modified: 2014-05-08 22:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Surfaces moving to Primary output on preview mode (1.04 MB, Video/webm)
2014-01-02 23:07 UTC, Anu Reddy
Details

Description Anu Reddy 2013-12-30 23:00:31 UTC
Weston does not provide preview on secondary display. Preview on multi display always available on primary display.

Steps:
1. Two cold plugged displays running on weston 
2. Identify primary display (display1) and secondary display (display2)
3. Launch terminals on both displays: Weston-terminal
4. From display1 press <Super> key for display1 preview. Observe terminal from display2 moving to display1. Observe that both weston terminals from display1 and display2 appear on display1 preview.
5. From display2 press <Super> key for display2 preview. Observe that display2 weston terminal appear on display1 preview and there is no terminal in display2 preview.

Expected result:
Preview should be display specific. Preview from secondary display (display2) should be on secondary display. 

Environment :
Kernel:3.9.5-301.fc19.x86_64
wayland (HEAD) 1.3.91-0-g01bde63
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g6f7da01
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) remotes/origin/master-0-gdf42a80
efl (HEAD) remotes/origin/efl-1.8-0-g90c2320
elementary (HEAD) remotes/origin/elementary-1.8-0-ge077db6
wayland-fits (HEAD) remotes/origin/HEAD-0-gcd75d94
Comment 1 Anu Reddy 2014-01-02 23:07:35 UTC
Created attachment 91444 [details]
Surfaces moving to Primary output on preview mode
Comment 2 Kristian Høgsberg 2014-02-18 22:15:22 UTC
commit 3b6e68e2c1e3b80173f29b9930f966ce84fd5c77
Author: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>
Date:   Mon Feb 10 13:22:32 2014 +0100

    exposay: arrange views per-output
    
    https://bugs.freedesktop.org/show_bug.cgi?id=73173


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.