exposay: arrange views per-output

https://bugs.freedesktop.org/show_bug.cgi?id=73173